# distributed-transformer-biggeo-initial

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
docs/: README.md  api-reference.md  architecture.md  aws-configuration.md  configuration.md  data-formats.md  development-guide.md  getting-started.md  migration.md  monitoring.md  performance.md  plugins.md
k8s/: configmap.yaml  serviceaccount.yaml  workflow.yaml
rs_app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  bucket-policy.json  config.example.yaml
rs_app/examples/json_plugin/: Cargo.toml
rs_app/examples/json_plugin/src/: lib.rs
rs_app/src/: config.rs  execution.rs  lib.rs  main.rs  plugin.rs  table_provider.rs  validation.rs
rs_app/src/formats/: csv_format.rs  mod.rs  parquet_format.rs
rs_app/src/storage/: azure.rs  local.rs  mod.rs  s3.rs  tests.rs
rs_app/src/streaming/: buffer_pool.rs
src/: main.rs
