[package]
name = "distributed-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
object_store = { version = "0.11.1", features = ["aws"] }
arrow = { version = "53.3.0", features = ["prettyprint"] }
parquet = { version = "53.3.0", features = ["arrow"] }
futures = "0.3.31"
anyhow = "1.0.94"
bytes = "1.5.0"
dotenv = "0.15.0"