[package]
name = "distributed-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
object_store = { version = "0.11.1", features = ["aws", "azure"] }
arrow = { version = "53.3.0", features = ["prettyprint", "csv"] }
parquet = { version = "53.3.0", features = ["arrow", "async"] }
futures = { version = "0.3.31", features = ["io-compat"] }
anyhow = "1.0.94"
bytes = "1.5.0"
dotenv = "0.15.0"
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = "0.3"
async-trait = "0.1.74"
clap = { version = "4.4", features = ["derive"] }
datafusion = "43.0.0"
url = "2.5"
csv = "1.3"
pin-project-lite = "0.2"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"