[package]
name = "distributed-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
object_store = { version = "0.11.1", features = ["aws", "azure"] }
arrow = { version = "47.0", features = ["prettyprint"] }
parquet = "47.0"
futures = "0.3"
anyhow = "1.0"
bytes = "1.0"
dotenv = "0.15.0"
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = "0.3"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
datafusion = "32.0"
url = "2.5"
csv = "1.3"
pin-project-lite = "0.2"
lazy_static = "1.4"
libloading = "0.8"
once_cell = "1.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
num_cpus = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[workspace]
members = ["examples/*"]